<resources>
    <string name="app_name">WatchStore</string>
    <string name="price">Price:</string>
    <string name="dummyTotal">0</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="order_total">Order Total:</string>
    <string name="payment_total">Payment Total:</string>
    <string name="delivery_fee">Delivery Fee:</string>
    <string name="tax">Tax (13%):</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_country_name">Enter Country Name</string>
    <string name="helping_hands">Helping Hands</string>
    <string name="email_id">Enter Email ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="to_register_click_here">To register, click here!</string>
    <string name="watch_bg">watch bg</string>
    <string name="helping_hands_home">Helping Hands</string>
    <string name="clock_in">Clock In</string>
    <string name="todo">TODO</string>
    <string name="price_initial">Price: $0</string>
    <string name="proceed_to_pay_disabled">Proceed to Pay</string>
    <string name="please_add_items_before_placing_an_order">Please add items before placing an order</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter Email</string>
    <string name="click_here_to_login">Click here to Login</string>
    <string name="title">Title</string>
    <string name="product_image">Product Image</string>
    <string name="negative">-</string>
    <string name="zero">0</string>
    <string name="positive">+</string>
    <string name="quantity">Quantity:</string>
    <string name="description">Description</string>
    <string name="update">Update</string>
</resources>