<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/navBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:scaleType="centerInside"
            android:layout_height="wrap_content"
            android:minHeight="300dp" />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/description"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price">

            <TextView
                android:id="@+id/priceKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:text="@string/price"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:textSize="22sp" />

            <Button
                android:id="@+id/decrement_btn"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/negative"
                android:backgroundTint="#206683"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:textColorLink="@color/black"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <Button
                android:id="@+id/increment_btn"
                android:layout_width="48dp"
                android:backgroundTint="#206683"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/positive"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>
    <include layout="@layout/activity_navigation"/>
</RelativeLayout>