<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_margin="1dp"
    android:layout_marginTop="0dp"
    app:cardElevation="@dimen/cardview_compat_inset_shadow"
    android:elevation="60dp"
    app:cardUseCompatPadding="true">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:padding="5dp">
            <ImageView
                android:id="@+id/image"
                android:layout_width="185dp"
                android:layout_height="125dp"
                android:scaleType="fitCenter"
                android:background="@color/white"
                android:contentDescription="@string/product_image"
                android:padding="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/helping_hands" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <LinearLayout
                android:id="@+id/priceLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >

                <TextView
                    android:id="@+id/priceKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/price"
                    android:textStyle="italic"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textStyle="italic"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quantityLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/priceLayout">

                <Button
                    android:id="@+id/decrement_btn"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#206683"
                    android:gravity="center"
                    android:text="@string/negative"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <Button
                    android:id="@+id/increment_btn"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#206683"
                    android:text="@string/positive"
                    android:textSize="22sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.gridlayout.widget.GridLayout>


</androidx.cardview.widget.CardView>